www.topmonks.com/src/stylesheets/main.scss
@import "@material/layout-grid/mdc-layout-grid";

:root {
  --mdc-layout-grid-margin-desktop: 24px;
  --mdc-layout-grid-gutter-desktop: 20px;
  --mdc-layout-grid-column-width-desktop: 60px;

  --tm-primary: #fe664b;
  --tm-primary-dark: #c53321;
  --tm-primary-light: #ff9878;
  --tm-secondary: #5c5fd4;
  --tm-secondary-dark: #1d35a2;
  --tm-secondary-light: #918cff;
  --tm-grey: #9b9b9b;
  --tm-article-background: #f8fbfc;
  --tm-black: #4a4a4a;
}

body {
  padding: 0;
  margin: 0;
}


.tm-layout-wrapper {
  max-width: 1008px;
  margin: 0 auto;
  --mdc-layout-grid-margin-desktop: 0;
  --mdc-layout-grid-margin-tablet: 0;
  --mdc-layout-grid-margin-phone: 0;
}

.tm-layout-align-center {
  text-align: center;
}

.tm-layout-grid__cell--span-0-desktop {
  @media screen and (min-width: 840px) {
    display: none;
  }
}

blockquote {
  margin: 0 0 3em;

  p {
    position: relative;
    padding: 0 1em;
    margin-bottom: 0.5em;
    quotes: "“" "„";

    &::before,
    &::after {
      content: open-quote;
      display: inline-block;
      color: #dadada;
      font-size: 2.125em;
      font-weight: 900;
      position: absolute;
    }

    &::before {
      left: 0;
    }

    &::after {
      content: close-quote;
      bottom: 4px;
      padding-left: 4px;
    }
  }

  cite {
    padding: 0 1em;
  }
}

.tm-page-header blockquote p {
  font-size: 28px;
  line-height: 32px;

  @media screen and (min-width: 480px) {
    font-size: 40px;
    line-height: 48px;
  }
  color: #9b9b9b;
  text-align: center;
  margin: 68px 0;

  &::before,
  &::after {
    content: none;
  }
}

.box--purple {
  background: linear-gradient(to bottom right, #529cfb 0%, #96f 78%);
  border-radius: 32px;
  color: white;
}

.main-info {
  h2 {
    text-align: center;
    border-radius: 50px;
    padding: 8px;
    background-color: white;
    margin-bottom: 6em;
  }

  .box--lead {
    padding: 20px 8px;
  }
}

.page_sub-title p {
  font-size: 24px;
  color: var(--tm-contact-darkgrey);
  text-align: center;
  opacity: 0.7;
}

.page_sub-title h2 {
  text-transform: none;
}

.action-button {
  font-weight: 700;
  display: block;
  border-radius: 100px;
  color: #fff;
  background-color: var(--tm-primary);
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.16);
  padding: 10px 28px;
  margin: 0 1em;
  text-align: center;
  text-transform: uppercase;

  &:hover {
    text-decoration: none;
    background-color: var(--tm-primary-dark);
  }
}

.sub-text {
  color: var(--tm-grey);
}

.box,
.teambox {
  background-color: white;
  box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.1);
  border-radius: 20px;
  padding: 8px 20px;
}

.box img {
  margin: 2em auto;
  display: flex;
}

.box .button {
  text-transform: uppercase;
  display: inline-block;
  padding: 6px 8px;
  margin: 16px 0 8px -8px;
  border-radius: 4px;

  &:hover {
    text-decoration: none;
    background-color: rgba(0, 0, 0, 0.12);
  }
}

.how-we-work {
  h2 {
    font-family: futura-pt, sans-serif;
    font-weight: 700;
    position: relative;
    z-index: 10;
    @media screen and (max-width: 839px) {
      display: none;
    }
  }

  h2::before {
    content: "";
    display: block;
    width: 66.666%;
    height: 150px;
    border: 1px solid #ccc;
    border-bottom: none;
    border-radius: 56px;
    position: absolute;
    left: 16.6666%;
    top: 32px;
    z-index: -1;
  }

  h2::after {
    content: "";
    display: block;
    height: 100px;
    border: 1px solid #ccc;
    border-right: none;
    position: absolute;
    left: 50%;
    top: 32px;
    z-index: -1;
  }

  .box {
    background: #fff url("/images/ic_listen.svg") center top 60px no-repeat;
    background-size: auto 82px;
    padding-top: 160px;
    z-index: 15;
    position: relative;
  }

  .box.box--develop {
    background-image: url("/images/ic_develop.svg");
  }

  .box.box--verify {
    background-image: url("/images/ic_verify.svg");
  }

  .box--purple {
    font-size: 20px;
    padding: 4px 16px;
  }
}

.tm-partners {
  padding: 0 0 3%;
  background: #fff url("/images/bgnd_curve_3.svg") center bottom no-repeat;
  background-size: 100% auto;

  .tm-bgnd-wrapper {
    background-color: #f3f3f3;
  }
}

.tm-partners__list {
  color: var(--tm-grey);
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  @media screen and (max-width: 479px) {
    flex-direction: column;
  }
  margin: 0;

  li {
    width: 164px;
    @media screen and (min-width: 480px) {
      margin-right: 24px;
    }
  }

  svg {
    width: 100%;
    fill: currentColor;
    stroke: currentColor;
  }
}

li.tm-partners__item--adler {
  width: 100px;
}

.product {
  background-color: #f3f3f3;

  .tm-layout-wrapper {
    background: url("/images/bgnd_product_top_mobile.svg") top center no-repeat,
    url("/images/bgnd_product_mobile.svg") bottom center no-repeat;
    background-size: 100% auto;
    padding-top: 110px;
    padding-bottom: 110px;
  }

  h3 {
    color: #529cfb;
    font-size: 1em;
    text-transform: uppercase;
    text-align: left;
  }

  @media screen and (max-width: 479px) {
    .tm-layout-wrapper {
      padding-left: 0;
      padding-right: 0;
    }
    .steps__step {
      &:nth-child(odd) {
        padding-left: 85px;
        padding-right: 24px;
        margin-left: 24px;
        background: url("/images/bgnd_step_1.svg") left 0 top 10px no-repeat;
      }

      &:nth-child(even) {
        padding-right: 85px;
        padding-left: 24px;
        margin-right: 24px;
        background: url("/images/bgnd_step_2.svg") right 0 top 3px no-repeat;
      }

      &.design {
        background-image: url("/images/bgnd_step_3.svg");
      }

      &.development {
        background-image: url("/images/bgnd_step_4.svg");
      }
    }
  }
  @media screen and (min-width: 480px) {
    .tm-layout-wrapper {
      padding-top: 24px;
      padding-bottom: 24px;
    }
    p {
      width: 280px;
      @media screen and (min-width: 840px) {
        width: 340px;
      }
    }
    .steps {
      width: 100%;
      height: 100%;
      min-height: 769px;
      margin: 0 auto;
      background: url("/images/bgnd_product.svg") calc(50% - 20px) top no-repeat;
    }
    .steps__step {
      position: relative;

      &:nth-child(odd) {
        top: 65px;
        left: 460px;
        @media screen and (min-width: 840px) {
          left: 560px;
        }
      }

      &:nth-child(even) {
        top: 165px;
        left: -268px;
        @media screen and (min-width: 840px) {
          left: -468px;
        }
      }

      &.design {
        top: 30px;
        @media screen and (min-width: 840px) {
          top: 45px;
        }
      }

      &.development {
        top: 130px;
        @media screen and (min-width: 840px) {
          top: 147px;
        }
      }
    }
  }
}

.customers {
  padding: 3% 0 0;
  background: #fff url("/images/bgnd_curve_4.svg") center top no-repeat;
  background-size: 100% auto;
  text-align: center;

  .tm-bgnd-wrapper {
    background-color: #f3f3f3;
  }

  .name {
    font-size: 16px;
    color: var(--tm-grey);
    text-align: center;
  }

  blockquote {
    margin-bottom: 2em;
  }
}

.tm-testimonial__picture {
  border-radius: 50%;
  filter: grayscale(1);
  width: 72px;
  border: 2px solid #fff;
}

.contact {
  text-align: center;
  padding: 64px 0 100px;
  background: #fff url("/images/bgnd_curve_2.svg") top -5px left calc(
    50% - 530px
  ) no-repeat;
  @media screen and (min-width: 480px) {
    background-position: top -1px left calc(50% - 360px);
  }

  .contact_title p {
    color: var(--tm-black);
  }

  .person--photo img {
    border-radius: 50%;
    width: 183px;
    filter: saturate(0);
  }

  svg {
    margin-top: 8px;
  }
}

#page-topmonks-index {
  @media screen and (max-width: 479px) {
    background: #fff url("https://res.cloudinary.com/topmonks/image/upload/w_352,dpr_auto,q_auto,f_auto/v1531754590/topmonks.com/bgnd_header_mobile.png") no-repeat right calc(50% - 145px) top -1px;
    background-size: 352px auto;
    overflow-x: hidden;
  }
  @media screen and (max-width: 479px) and (-webkit-min-device-pixel-ratio: 2),
  screen and (max-width: 479px) and (min--moz-device-pixel-ratio: 2),
  screen and (max-width: 479px) and (-o-min-device-pixel-ratio: 2/1),
  screen and (max-width: 479px) and (min-device-pixel-ratio: 2),
  screen and (max-width: 479px) and (min-resolution: 192dpi),
  screen and (max-width: 479px) and (min-resolution: 2dppx) {
    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_352,dpr_2,q_auto,f_auto/v1531754590/topmonks.com/bgnd_header_mobile.png");
  }
  @media screen and (min-width: 480px) {
    background: url("https://res.cloudinary.com/topmonks/image/upload/w_1017,dpr_auto,q_auto,f_auto/v1531486239/topmonks.com/bgnd_header.png") no-repeat right calc(50% - 390px) top -1px;
    background-size: 1017px auto;
    overflow-x: hidden;
  }
  @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2),
  screen and (min-width: 480px) and (min-resolution: 192dpi),
  screen and (min-width: 480px) and (min-resolution: 2dppx) {
    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_1017,dpr_2,q_auto,f_auto/v1531486239/topmonks.com/bgnd_header.png");
  }
  @media screen and (min-width: 480px) and (max-width: 839px) {
    background-position: right calc(50% - 460px) top -1px;
  }

  .tm-logo {
    @media screen and (min-width: 840px) {
      font-size: 1.6em;
      color: var(--tm-secondary);
      &:hover {
        color: var(--tm-secondary-dark);
      }
    }
  }

  .tm-hamburger {
    .tm-hamburger__container::after {
      color: rgba(0, 0, 0, 0.25);
    }

    .tm-hamburger__bar {
      background-color: var(--tm-primary);
    }
  }

  .tm-app-bar {
    background-color: #fff;
    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
    @media screen and (max-width: 839px) {
      .tm-logo {
        padding-top: 2px;
        font-size: 22px;
      }
    }
    @media screen and (min-width: 840px) {
      background-color: #fff;
      height: 72px;
      .tm-layout-wrapper {
        padding: 20px 0 0 16px;
      }
      + main {
        margin-top: 72px;
      }
      .tm-menu__list a {
        color: var(--tm-primary);
      }
    }
  }

  .tm-app-bar--open {
    color: #fff;

    .tm-hamburger__container::after {
      color: rgba(255, 255, 255, 0.5);
    }

    .tm-hamburger__bar {
      background-color: #fff;
    }
  }
}

.cooperation {
  background: none;

  .box {
    align-items: center;
    justify-content: space-between;
    margin: 0;
    padding: 0;
    display: inline-flex;

    a {
      align-items: center;
      display: inline-flex;
      padding: 0 16px;
    }
  }

  @media (max-width: 840px) {
    text-align: center;
  }
}

/* MD GRID TABLET AND ABOVE BREAKPOINT */
@media (min-width: 480px) {
  .action-button {
    display: inline-block;
    margin: 0;
  }
  .main-info {
    position: relative;

    h2 {
      text-align: left;
      background: none;
      margin: 64px 0 8px;
    }

    .jumbotron__lead {
      box-shadow: none;
    }

    .jumbotron__lead p {
      max-width: 320px;
    }

    .box--lead {
      height: auto;
    }
  }
  .cooperation {
    h2 {
      margin-bottom: 18px;
    }

    .box + .box {
      margin-top: calc(var(--mdc-layout-grid-gutter-desktop) * 2);
    }
  }
  .customers blockquote p {
    font-size: 1.66em;

    &::before,
    &::after {
      font-size: 2.22em;
      position: relative;
    }

    &::before {
      left: -8px;
      top: 16px;
    }

    &::after {
      bottom: -2px;
    }
  }
  .box.box--mobile-only {
    background: none;
    box-shadow: none;
  }
}

/* MD GRID TABLET ONLY BREAKPOINT */
@media screen and (min-width: 480px) and (max-width: 839px) {
  .tm-case-studies__clients {
    align-content: space-between;
  }
}

@media screen and (min-width: 840px) {
  .tm-layout-wrapper {
    padding: 24px;
  }
}

